# proxy-pool-rust

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  deploy-remote.sh  proxy_ip_suggest.txt
.agents/skills/trellis-session-insight/: SKILL.md
.codex/: config.toml  hooks.json
.github/workflows/: docker-build.yml
.playwright-mcp/: page-2026-07-03T12-07-32-029Z.yml  page-2026-07-03T12-07-51-439Z.yml  page-2026-07-03T12-08-26-674Z.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-diff.txt  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
.trellis/: config.yaml
.trellis/agents/: implement.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md
.trellis/tasks/07-03-ci-mcp-auto-update/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-06-status-health-observability/: design.md  prd.md  task.json  verification.md
.trellis/tasks/07-07-business-e2e-smoke-v1/: implement.md  prd.md  task.json
.trellis/tasks/07-07-business-target-routing-validation-v1/: design.md  prd.md  task.json
.trellis/tasks/07-07-dev-update-config-doc-hardening-v1/: implement.md  task.json
.trellis/tasks/07-07-fetcher-source-circuit-breaker-mvp/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-fetcher-validator-quality/: prd.md  task.json
.trellis/tasks/07-07-free-source-expansion-v2/: design.md  prd.md  task.json
.trellis/tasks/07-07-gateway-http-connect-fallback-v1/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-gateway-route-debugging/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-github-airport-source-pack/: design.md  implement.md  task.json
.trellis/tasks/07-07-no-ssh-dev-validation/: design.md  prd.md  task.json
.trellis/tasks/07-07-proxy-quality-recommendations-dry-run/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-release-status-public-smoke-v1/: implement.md  prd.md  task.json
.trellis/tasks/07-07-release-validation-no-ssh-runbook-v2/: prd.md  task.json
.trellis/tasks/07-07-score-retention-policy/: design.md  implement.md  task.json
.trellis/tasks/07-07-source-quality-expansion-v1/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-validator-observability-v2/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-warp-ops-enhancement/: prd.md  task.json
.trellis/tasks/07-07-web-config-api/: implement.md  task.json  verification.md
.trellis/tasks/07-07-xray-config-dry-run-and-remove/: implement.md  task.json
.trellis/tasks/07-07-xray-node-lifecycle-mvp/: implement.md  task.json
config/: routes.example.yaml  settings.example.yaml
crates/proxy-api/: Cargo.toml
crates/proxy-api/src/: lib.rs  routes.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: capability.rs  circuit.rs  config.rs  dedup.rs  ewma.rs  fetcher.rs  geoip.rs  lib.rs  models.rs  pacing.rs  route_debug.rs  router.rs  scheduler.rs  source_origin.rs  status.rs  store.rs  store.rs.tmp.7196.dbc4be48bb17  validator.rs  warp.rs  xray_status.rs
crates/proxy-core/src/fetcher/: base.rs  clarketm.rs  free_proxy_list.rs  geonode.rs  proxyscrape.rs  public_lists.rs  thespeedx.rs
crates/proxy-core/src/warp/: balancer.rs  health.rs
crates/proxy-gateway/: Cargo.toml
crates/proxy-gateway/src/: http_connect.rs  lib.rs  socks5.rs  upstream.rs
crates/proxy-mcp/: Cargo.toml
crates/proxy-mcp/src/: lib.rs  rest_client.rs  serve.rs
crates/proxy-server/: Cargo.toml  build.rs
crates/proxy-server/src/: main.rs
crates/proxy-sub/: Cargo.toml
crates/proxy-sub/src/: checkin.rs  convert.rs  lib.rs  models.rs  ops.rs  pending.rs  refresh.rs
crates/proxy-sub/src/airport/: email.rs  mod.rs  panel.rs  register.rs
crates/proxy-sub/src/discover/: aggregator.rs  airport.rs  extract.rs  github_search.rs  mod.rs  search.rs  static_url.rs  telegram.rs
crates/proxy-sub/src/parser/: base64_uri.rs  clash.rs  mod.rs  surge.rs  v2ray_json.rs
crates/proxy-sub/src/source/: cache.rs  mod.rs
crates/proxy-sub/tests/fixtures/: base64_blob.txt  base64_sample.txt  clash_sample.yaml  mixed_invalid.txt  surge_sample.txt  v2ray_sample.json
crates/proxy-xray/: Cargo.toml  build.rs
crates/proxy-xray/protos/xray/app/proxyman/: config.proto
crates/proxy-xray/protos/xray/common/net/: destination.proto
crates/proxy-xray/protos/xray/common/protocol/: server_spec.proto
crates/proxy-xray/protos/xray/proxy/freedom/: config.proto
crates/proxy-xray/protos/xray/proxy/shadowsocks/: config.proto
crates/proxy-xray/protos/xray/proxy/socks/: config.proto
crates/proxy-xray/protos/xray/proxy/trojan/: config.proto
crates/proxy-xray/protos/xray/proxy/vmess/: account.proto
crates/proxy-xray/protos/xray/proxy/vmess/outbound/: config.proto
crates/proxy-xray/protos/xray/transport/internet/: config.proto
crates/proxy-xray/protos/xray/transport/internet/tcp/: config.proto
crates/proxy-xray/protos/xray/transport/internet/tls/: config.proto
crates/proxy-xray/src/: config_gen.rs  lib.rs  models.rs  outbound_sync.rs  port_manager.rs  process.rs  proto.rs  xray_client.rs
deploy/: Dockerfile  docker-compose.yml  proxy-pool.service
docs/: ROADMAP.md  dev-validation.md  ops-cleanup.md  proxy-usage.md  score-retention.md  subscription-source-packs.md  trial-sub-intake.md
tests/integration/: __init__.py  business_e2e_smoke.py  config.py  conftest.py  pytest.ini  readonly_dev_smoke.py  requirements.txt  test_l0_business_e2e_smoke.py  test_l0_config_runbook_drift.py  test_l0_no_ssh_helpers.py  test_l0_readonly_dev_smoke.py  test_l0_release_status_public_smoke.py  test_l1_health.py  test_l2_api.py  test_l3_routing.py  test_l4_mcp.py  test_release_status_public_smoke.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue
web/src/api/: index.ts
(+285 files in other folders)
