[package]
name = "proxy-api"
version.workspace = true
edition.workspace = true

[dependencies]
proxy-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
