[package]
name = "proxy-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
redis = { workspace = true }
maxminddb = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
rand = "0.9"
futures = "0.3"
