[package]
name = "proxy-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
proxy-core = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
