[package]
name = "proxy-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
proxy-core = { workspace = true }
proxy-sub = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
axum = { workspace = true }

[[bin]]
name = "proxy-mcp-server"
path = "src/bin/proxy-mcp-server.rs"
