[package]
name = "proxy-server"
version.workspace = true
edition.workspace = true

[dependencies]
proxy-core = { workspace = true }
proxy-api = { workspace = true }
proxy-gateway = { workspace = true }
proxy-mcp = { workspace = true }
proxy-sub = { workspace = true }
proxy-xray = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
